# Perceptron

./: Perceptron.cabal  README.md  training.txt
matlab/: getEM.m  getFace.m  perceptron.m  percieve.m  shfl_and_split.m  sigmoid.m  step.m  test.m  train.m
src/: Classify.hs  Classify.hs~  Codes  Codes~  Common.hs  Func.hs  Main.hs~  RunKFold.hs  Test.hs  Train.hs  r  runkFold.hs  test.hs
