name:                Perceptron
version:             0.1.0.0
synopsis:            Simple perceptron in Haskell
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Bertil Nilsson
maintainer:          id09bnn@cs.umu.se
-- copyright:
category:            AI
build-type:          Simple
cabal-version:       >=1.8

executable Classify
  main-is: Classify.hs
  -- other-modules:
  build-depends:       base >= 4.5 && < 5,
                       random >=1.0 && < 2, array >= 0.4 && < 1.0
  hs-source-dirs:      src

executable Train
  main-is: Train.hs
  build-depends:       base >=4.5 && < 5,
                       random >=1.0 && < 2, array >= 0.4 && < 1.0
  hs-source-dirs:      src

executable runkFold
  main-is: runkFold.hs
  build-depends:       base >=4.5 && < 5,
                       random >=1.0 && < 2, array >= 0.4 && < 1.0
  hs-source-dirs:      src
